--- a/app/src/main/res/layout/fragment_me_step2.xml
+++ b/app/src/main/res/layout/fragment_me_step2.xml
@@ -245,6 +245,7 @@
                     <ListView
                         android:id="@+id/me_listview_phone"
                         android:layout_width="match_parent"
+                        android:divider="#00000000"
                         android:layout_height="wrap_content"/>
 
                 </LinearLayout>
@@ -281,6 +282,7 @@
 
                     <ListView
                         android:id="@+id/me_listview_activity"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
@@ -317,6 +319,7 @@
 
                     <ListView
                         android:id="@+id/me_listview_location"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
@@ -353,6 +356,7 @@
 
                     <ListView
                         android:id="@+id/me_listview_social"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
@@ -390,6 +394,7 @@
 
                     <ListView
                         android:id="@+id/me_listview_sleep"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
