--- a/app/src/main/res/layout/fragment_report_step2.xml
+++ b/app/src/main/res/layout/fragment_report_step2.xml
@@ -733,6 +733,7 @@
 
                     <ListView
                         android:id="@+id/frg_report_step2_listview_phone"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
@@ -770,6 +771,7 @@
 
                     <ListView
                         android:id="@+id/frg_report_step2_listview_activity"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
@@ -806,6 +808,7 @@
 
                     <ListView
                         android:id="@+id/frg_report_step2_listview_location"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
@@ -842,6 +845,7 @@
 
                     <ListView
                         android:id="@+id/frg_report_step2_listview_social"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
@@ -879,6 +883,7 @@
 
                     <ListView
                         android:id="@+id/frg_report_step2_listview_sleep"
+                        android:divider="#00000000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
