--- a/app/src/main/res/layout/point_dialog.xml
+++ b/app/src/main/res/layout/point_dialog.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:paddingHorizontal="10dp"
+    android:paddingVertical="30dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -27,6 +28,7 @@
         android:orientation="horizontal"
         android:layout_marginHorizontal="20dp"
         android:padding="5dp"
+        android:visibility="gone"
         android:background="@color/color_point_bg">
 
         <TextView
@@ -78,6 +80,7 @@
         android:orientation="horizontal"
         android:layout_marginHorizontal="20dp"
         android:padding="5dp"
+        android:visibility="gone"
         android:background="@color/color_point_bg">
 
         <TextView
