--- a/app/src/main/res/layout/first_start_step_dialog.xml
+++ b/app/src/main/res/layout/first_start_step_dialog.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/first_start_step1_layout">
+    android:id="@+id/first_start_step_layout">
 
     <TextView
-        android:id="@+id/first_start_step1_title"
+        android:id="@+id/first_start_step_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosanscjkkrmedium"
@@ -15,11 +15,11 @@
         android:text="test title"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
-        android:layout_above="@id/first_start_step1_txt"
+        android:layout_above="@id/first_start_step_txt"
         android:layout_marginBottom="28dp"/>
     
     <TextView
-        android:id="@+id/first_start_step1_txt"
+        android:id="@+id/first_start_step_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -30,7 +30,7 @@
         android:textColor="@color/textColor_default"/>
 
     <Button
-        android:id="@+id/first_start_step1_btn"
+        android:id="@+id/first_start_step_btn"
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="29dp"
@@ -43,6 +43,6 @@
         android:gravity="center"
         android:textColor="@color/color_white"
         android:textSize="@dimen/my_text_size16"
-        android:layout_below="@id/first_start_step1_txt"/>
+        android:layout_below="@id/first_start_step_txt"/>
 
 </RelativeLayout>
