--- a/app/src/main/res/layout/fragment_care_child1.xml
+++ b/app/src/main/res/layout/fragment_care_child1.xml
@@ -653,6 +653,38 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <RelativeLayout
+        android:id="@+id/before_start_step2_container"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
 
+        <TextView
+            android:id="@+id/before_start_step2_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/string_before_start_step2_title"
+            android:textAlignment="center"
+            android:fontFamily="@font/notosanscjkkrmedium"
+            android:includeFontPadding="true"
+            android:textSize="@dimen/my_text_size20"
+            android:textColor="@color/textColor_blue"/>
+
+        <TextView
+            android:id="@+id/before_start_step2_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/string_before_start_step2_text"
+            android:fontFamily="@font/notosanscjkkrregular"
+            android:includeFontPadding="true"
+            android:textSize="@dimen/my_text_size14"
+            android:textAlignment="center"
+            android:layout_below="@id/before_start_step2_title"
+            android:layout_marginTop="15dp"/>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
