--- a/app/src/main/res/layout/fragment_care_child2.xml
+++ b/app/src/main/res/layout/fragment_care_child2.xml
@@ -46,7 +46,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="80dp"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:fontFamily="@font/notosanscjkkrmedium"
             android:includeFontPadding="false"
