--- a/app/src/main/res/layout/fragment_care_child2.xml
+++ b/app/src/main/res/layout/fragment_care_child2.xml
@@ -53,7 +53,7 @@
             android:fontFamily="@font/notosanscjkkrmedium"
             android:includeFontPadding="false"
             android:textColor="@color/textColor_blue"
-            android:textSize="@dimen/my_text_size16"
+            android:textSize="@dimen/my_text_size14"
             android:text="test"/>
 
         <Button
@@ -104,17 +104,17 @@
             android:includeFontPadding="false"
             android:textColor="@color/textColor_light"
             android:textSize="@dimen/my_text_size14"
-            android:text="test"
             android:visibility="visible" />
     </ScrollView>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/child2_recommend_container"
-        app:layout_constraintTop_toBottomOf="@id/child2_txt3_container"
+
+        app:layout_constraintBottom_toTopOf="@id/child2_switch_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginBottom="19dp"
         android:background="@drawable/view_top_border">
 
         <TextView
@@ -130,44 +130,60 @@
             android:text="@string/string_child2_txt4"
             app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/child2_recommend1"
-            android:layout_marginTop="3dp"
-            android:layout_marginHorizontal="35dp"
+        <ScrollView
+            android:id="@+id/child2_recommend_scroll"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:textColor="@color/textColor_light"
-            android:textSize="@dimen/my_text_size14"
-            android:text="test"
-            app:layout_constraintTop_toBottomOf="@id/child2_txt4"/>
+            android:layout_height="70dp"
+            app:layout_constraintTop_toBottomOf="@id/child2_txt4">
 
-        <TextView
-            android:id="@+id/child2_recommend2"
-            android:layout_marginTop="3dp"
-            android:layout_marginHorizontal="35dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:textColor="@color/textColor_light"
-            android:textSize="@dimen/my_text_size14"
-            android:text="test"
-            app:layout_constraintTop_toBottomOf="@id/child2_recommend1"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/child2_recommend3"
-            android:layout_marginTop="3dp"
-            android:layout_marginHorizontal="35dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:textColor="@color/textColor_light"
-            android:textSize="@dimen/my_text_size14"
-            android:text="test"
-            app:layout_constraintTop_toBottomOf="@id/child2_recommend2"/>
+                <TextView
+                    android:id="@+id/child2_recommend1"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginHorizontal="35dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosanscjkkrlight"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/textColor_light"
+                    android:textSize="@dimen/my_text_size14"
+                    android:text="test"
+                    app:layout_constraintTop_toBottomOf="@id/child2_txt4"/>
+
+
+                <TextView
+                    android:id="@+id/child2_recommend2"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginHorizontal="35dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosanscjkkrlight"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/textColor_light"
+                    android:textSize="@dimen/my_text_size14"
+                    android:text="test"
+                    app:layout_constraintTop_toBottomOf="@id/child2_recommend1"/>
+
+                <TextView
+                    android:id="@+id/child2_recommend3"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginHorizontal="35dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosanscjkkrlight"
+                    android:includeFontPadding="false"
+                    android:textColor="@color/textColor_light"
+                    android:textSize="@dimen/my_text_size14"
+                    android:text="test"
+                    app:layout_constraintTop_toBottomOf="@id/child2_recommend2"/>
+
+            </LinearLayout>
+
+        </ScrollView>
 
         <Button
             android:id="@+id/child2_load_btn"
@@ -183,7 +199,7 @@
             android:textSize="@dimen/my_text_size14"
             android:text="다른 추천 보기"
             android:stateListAnimator="@null"
-            app:layout_constraintTop_toBottomOf="@id/child2_recommend3"
+            app:layout_constraintTop_toBottomOf="@id/child2_recommend_scroll"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
