--- a/app/src/main/res/layout/fragment_stress_report2.xml
+++ b/app/src/main/res/layout/fragment_stress_report2.xml
@@ -96,6 +96,9 @@
             android:id="@+id/txt_stress_level"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/notosanscjkkrregular"
+            android:includeFontPadding="false"
+            android:textSize="@dimen/my_text_size14"
             android:text="stress level txt"
             android:layout_marginTop="3dp"
             app:layout_constraintTop_toBottomOf="@id/frg_report_step2_img"/>
