--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,8 @@
         <item name="android:titleTextColor">@color/textColor_default</item>
         <item name="android:background">@color/toolbar_background</item>
         <item name="actionMenuTextColor">@color/textColor_blue</item>
+        <item name="android:fontFamily">@font/notosanscjkkrmedium</item>
+        <item name="android:textSize">@dimen/my_text_size16</item>
     </style>
 
     <style name="tab_text" parent="TextAppearance.Design.Tab">
