--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -42,7 +42,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone">
+        android:visibility="visible"
+        android:elevation="40dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,6 +88,21 @@
         android:layout_margin="30dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar_map"/>
 
+    <Button
+        android:id="@+id/map_save_btn"
+        android:layout_width="135dp"
+        android:layout_height="32dp"
+        android:fontFamily="@font/notosanscjkkrregular"
+        android:includeFontPadding="false"
+        android:textColor="@color/textColor_blue"
+        android:textSize="@dimen/my_text_size16"
+        android:text="이 장소 저장하기"
+        app:layout_constraintTop_toBottomOf="@id/map"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn_design_blue"/>
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/map_explain"
         android:layout_width="match_parent"
@@ -98,7 +114,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="28dp"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/map"/>
+        app:layout_constraintTop_toBottomOf="@id/map_save_btn"/>
 
 
     <androidx.appcompat.widget.AppCompatTextView
