--- a/app/src/main/res/layout/activity_select_palce_save.xml
+++ b/app/src/main/res/layout/activity_select_palce_save.xml
@@ -42,6 +42,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar_map_container"
         android:padding="30dp"
         android:orientation="vertical"
+        android:visibility="gone"
         android:background="@drawable/view_bottom_border">
 
         <TextView
