--- a/app/src/main/res/menu/toolbar_map_current_save_btn.xml
+++ b/app/src/main/res/menu/toolbar_map_current_save_btn.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/toolbar_map_current_save_btn"
-        android:title="선택 장소 저장"
-        app:showAsAction="ifRoom"/>
+        android:title="완료"
+        app:showAsAction="ifRoom" />
 </menu>
