--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,172 +8,183 @@
     android:focusable="true"
     android:focusableInTouchMode="true">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_map"
+    <ScrollView
+        android:id="@+id/map_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="10dp"
-        android:theme="@style/Toolbar"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/toolbar_map_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="설정"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/notosanscjkkrregular"
-            android:textSize="20sp" />
-
-    </androidx.appcompat.widget.Toolbar>
-
-    <LinearLayout
-        android:id="@+id/loading_frame"
-        android:layout_width="250dp"
-        android:layout_height="180dp"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="50dp"
-        android:gravity="center"
-        android:background="#80000000"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="visible"
-        android:elevation="40dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Loading the map..."
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Please, wait!"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/map"
-        android:layout_marginHorizontal="40dp"
-        android:layout_marginTop="5dp"
-        app:cardCornerRadius="4dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <fragment
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-            android:id="@+id/frg_places_autocomplete"/>
+            android:layout_height="match_parent">
 
-    </androidx.cardview.widget.CardView>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar_map"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:elevation="10dp"
+                android:theme="@style/Toolbar"
+                app:layout_constraintTop_toTopOf="parent">
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        tools:context=".MapsActivity"
-        android:layout_margin="30dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_map"/>
+                <TextView
+                    android:id="@+id/toolbar_map_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="설정"
+                    android:includeFontPadding="false"
+                    android:fontFamily="@font/notosanscjkkrregular"
+                    android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/map_save_btn"
-        android:layout_width="135dp"
-        android:layout_height="32dp"
-        android:fontFamily="@font/notosanscjkkrregular"
-        android:includeFontPadding="false"
-        android:textColor="@color/textColor_blue"
-        android:textSize="@dimen/my_text_size16"
-        android:text="이 장소 저장하기"
-        app:layout_constraintTop_toBottomOf="@id/map"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_design_blue"/>
+            </androidx.appcompat.widget.Toolbar>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/map_explain"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanscjkkrlight"
-        android:includeFontPadding="false"
-        android:textSize="@dimen/guide_text_size"
-        android:text="@string/map_explain"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="28dp"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/map_save_btn"/>
+            <LinearLayout
+                android:id="@+id/loading_frame"
+                android:layout_width="250dp"
+                android:layout_height="180dp"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="50dp"
+                android:gravity="center"
+                android:background="#80000000"
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="visible"
+                android:elevation="40dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Loading the map..."
+                    android:textStyle="bold"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Please, wait!"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/map"
+                android:layout_marginHorizontal="40dp"
+                android:layout_marginTop="5dp"
+                app:cardCornerRadius="4dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
+
+                <fragment
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                    android:id="@+id/frg_places_autocomplete"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <fragment
+                android:id="@+id/map"
+                android:name="kr.ac.inha.mindscope.ScrollableMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                tools:context=".MapsActivity"
+                android:layout_margin="30dp"
+                app:layout_constraintTop_toBottomOf="@id/toolbar_map"/>
+
+            <Button
+                android:id="@+id/map_save_btn"
+                android:layout_width="135dp"
+                android:layout_height="32dp"
+                android:fontFamily="@font/notosanscjkkrregular"
+                android:includeFontPadding="false"
+                android:textColor="@color/textColor_blue"
+                android:textSize="@dimen/my_text_size16"
+                android:text="이 장소 저장하기"
+                app:layout_constraintTop_toBottomOf="@id/map"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/btn_design_blue"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/map_explain"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanscjkkrlight"
+                android:includeFontPadding="false"
+                android:textSize="@dimen/guide_text_size"
+                android:text="@string/map_explain"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="28dp"
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@id/map_save_btn"/>
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_map_save"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/saved_location"
-        android:fontFamily="@font/notosanscjkkrregular"
-        android:includeFontPadding="false"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/map_explain"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/txt_map_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/saved_location"
+                android:fontFamily="@font/notosanscjkkrregular"
+                android:includeFontPadding="false"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/map_explain"/>
 
 
-    <View
-        android:id="@+id/border_bottom_txt_map_save"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/border_color"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/txt_map_save"/>
+            <View
+                android:id="@+id/border_bottom_txt_map_save"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/border_color"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/txt_map_save"/>
 
+            <ListView
+                android:id="@+id/place_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:dividerHeight="5dp"
+                android:divider="#00000000"
+                app:layout_constraintTop_toBottomOf="@id/txt_map_save"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
+            <TextView
+                android:id="@android:id/empty"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginVertical="15dp"
+                android:fontFamily="@font/notosanscjkkrlight"
+                android:includeFontPadding="false"
+                app:layout_constraintTop_toBottomOf="@id/border_bottom_txt_map_save"
+                android:text="@string/map_first"
+                android:textAlignment="center"/>
 
-    <ListView
-        android:id="@+id/place_list"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginVertical="10dp"
-        android:dividerHeight="5dp"
-        android:divider="#00000000"
-        app:layout_constraintTop_toBottomOf="@id/txt_map_save"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+            <ImageButton
+                android:id="@+id/current_location_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="@id/map"
+                app:layout_constraintBottom_toBottomOf="@id/map"
+                android:src="@drawable/ic_f_location"
+                android:background="@color/color_current_location_btn"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="5dp"
+                android:padding="5dp"/>
 
-    <TextView
-        android:id="@android:id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginVertical="15dp"
-        android:fontFamily="@font/notosanscjkkrlight"
-        android:includeFontPadding="false"
-        app:layout_constraintTop_toBottomOf="@id/border_bottom_txt_map_save"
-        android:text="@string/map_first"
-        android:textAlignment="center"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageButton
-        android:id="@+id/current_location_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@id/map"
-        app:layout_constraintBottom_toBottomOf="@id/map"
-        android:src="@drawable/ic_f_location"
-        android:background="@color/color_current_location_btn"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp"
-        android:padding="5dp"/>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
