--- a/app/src/main/res/layout/permission_dialog.xml
+++ b/app/src/main/res/layout/permission_dialog.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/permission_img"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="105dp"
+        android:layout_height="105dp"
         android:src="@drawable/icon_low"
         android:layout_above="@id/permission_shadow_img"
         android:layout_centerHorizontal="true"
@@ -18,33 +18,69 @@
         android:layout_width="89dp"
         android:layout_height="10dp"
         android:background="@drawable/img_shadow"
-        android:layout_above="@id/permission_dialog_txt1"
+        android:layout_above="@id/permission_txt123_container"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="72dp"/>
+        android:layout_marginBottom="48dp"/>
 
-    <TextView
-        android:id="@+id/permission_dialog_txt1"
+    <RelativeLayout
+        android:id="@+id/permission_txt123_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/string_permission_txt1"
-        android:fontFamily="@font/notosanscjkkrregular"
-        android:includeFontPadding="false"
-        android:textSize="@dimen/my_text_size16"
-        android:textColor="@color/textColor_default_light"
-        android:textAlignment="center"/>
+        android:layout_centerInParent="true">
+
+        <TextView
+            android:id="@+id/permission_dialog_txt1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/string_permission_txt1"
+            android:fontFamily="@font/notosanscjkkrregular"
+            android:includeFontPadding="false"
+            android:textSize="@dimen/my_text_size16"
+            android:textColor="@color/textColor_default_light"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:id="@+id/permission_dialog_txt2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/string_permission_txt2"
+            android:fontFamily="@font/notosanscjkkrregular"
+            android:layout_below="@id/permission_dialog_txt1"
+            android:layout_centerHorizontal="true"
+            android:includeFontPadding="false"
+            android:textSize="@dimen/my_text_size16"
+            android:textColor="@color/textColor_default"
+            android:layout_marginTop="7dp"/>
+
+        <TextView
+            android:id="@+id/permission_dialog_txt3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/permission_dialog_txt2"
+            android:text="@string/string_permission_txt3"
+            android:fontFamily="@font/notosanscjkkrregular"
+            android:includeFontPadding="false"
+            android:textSize="@dimen/my_text_size14"
+            android:textColor="@color/textColor_blue"
+            android:layout_marginTop="7dp"
+            android:textAlignment="center"/>
+
+
+    </RelativeLayout>
+
+
 
     <TextView
-        android:id="@+id/permission_dialog_txt2"
+        android:id="@+id/permission_dialog_txt4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/permission_dialog_txt1"
-        android:text="@string/string_permission_txt2"
+        android:layout_below="@id/permission_txt123_container"
+        android:text="@string/string_permission_txt4"
         android:fontFamily="@font/notosanscjkkrregular"
         android:includeFontPadding="false"
-        android:textSize="@dimen/my_text_size16"
+        android:textSize="@dimen/my_text_size18"
         android:textColor="@color/textColor_default"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="48dp"
         android:textAlignment="center"/>
 
     <Button
@@ -52,9 +88,9 @@
         android:layout_width="167dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/permission_dialog_txt2"
+        android:layout_below="@id/permission_dialog_txt4"
         android:text="연동하기"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="13dp"
         android:fontFamily="@font/notosanscjkkrmedium"
         android:includeFontPadding="false"
         android:textSize="@dimen/my_text_size16"
