beta-0803 STEP2 1) synchronized between local and server - MeFragmentStep2, StressReportFragment1, CareChildFragment1 2) add function when foreground service is dead, restart

--- a/app/src/main/res/layout/fragment_me_step2.xml
+++ b/app/src/main/res/layout/fragment_me_step2.xml
@@ -182,6 +182,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/frg_me_date_container"
+            app:layout_constraintBottom_toTopOf="@id/txt_reason"
             android:textAlignment="center"
             android:textSize="@dimen/my_text_size14"
             android:fontFamily="@font/notosanscjkkrregular"
